# stipends

./: .env.test  LICENSE  Procfile  README.md  TODO.org  circle.yml  departments.yaml  stack.yaml  stipends.cabal
migrations/: 0.sql  1.sql  2.sql
spec/: Spec.hs
src/: Context.hs  Main.hs  Migrations.hs  Site.hs
src/Handler/: Curator.hs  Document.hs  Home.hs  Reporter.hs  Stipend.hs
src/State/: Cache.hs  Document.hs  Reporter.hs  Stipend.hs
src/State/Types/: Document.hs  Reporter.hs  Stipend.hs
src/Types/: Document.hs  Reporter.hs  Stipend.hs
static/: style.css
templates/: 404.tpl  _base.tpl  about.tpl  index.tpl  who.tpl
templates/curator/: authenticate.tpl  organizers.tpl  review.tpl
templates/document/: add.tpl
templates/reporter/: new.tpl  stipends.tpl
templates/stipends/: _fragment.tpl  show.tpl
